<resources>
    <string name="app_name">ClimaPlant</string>
    <string name="title">ClimaPlant</string>
    <string name="txtNom">nom :</string>
    <string name="editNom">nom</string>
    <string name="txtdesc">description :</string>
    <string name="editdesc">description</string>
    <string name="add_plant">Ajouter une plante</string>
    <string name="titleMeteo">Météo des prochains jours :</string>
    <string name="textLocalisation">localisation :</string>
    <string name="editLocalisation">localisation</string>
    <string-array name="plant_array">
        <item>tous les jours</item>
        <item>tous les 3 jours</item>
    </string-array>
    <string name="Arrosag">Arrosage :</string>
</resources>